ver 0.9.7.3
- the buttons tbtn_view_dimension and tbtn_view_tool_path of the gremlin view
  was in an undefined state after the start of gmoccapy. Now the state will be 
  set according to the state when leaving the GUI, default is show both
- the state view of gremlinwas by default "p" no the state on leaving the gui 
  will be restored after restarting the GUI

ver 0.9.7.2
- check for NO_FORCE_HOMING included

ver 0.9.7.1
- changed the structure of the files, so the user do not need to copy files after an update
  he only needs to adapt his conig files, this follows the new gscreen structure and 
  all files should be present after installing linuxcnc
- corrected some typos in code
- changed my way to show the entry dialog as integer only to the gscreen way
- added a file chooser to settings page to select the jump to dir for IconFileSelection
- file extensions are now taken from INI file and converted from raw data to correct
  format in an own function, taken in care in IconFileSelection and file to load chooser
- solved an error in IconFileSelection, crashing the GUI if button up was pressed being in the root dir

ver 0.9.7
- added a file selection dialog, for touch screen use
- in MDI mode it is now possible to add more commands, even if the interpreter is running
- do not block any more the spindle buttons while the interpreter is running,
  so spindle can be switched on and of at any time
- added a selection for show keyboard on file selection in settings page
- changes button home_4 to show differnt icon, depending on INI settings of 4th axis
- moved some code "G95 related" from periodic to _update_vel
- corrected some align valuse in glade file
- removed units from max_vel_label (glade file)
- corrected hardware button behavior
- added again a sim hardware ini file
- uniform usage of "" instedt of sometime '' (just to clear python style)
- user can select on settings page, if he want the offsettab or the preview tab 